--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.16.0",
+    "react-spinners": "^0.13.8",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
